istio/descriptors/deploy-https.yaml
# Copyright 2019 Google Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License. 

apiVersion: "v1"
kind: "Service"
metadata:
  name: "pubsub-proxy"
  namespace: "default"
  labels:
    app: "pubsub-proxy"
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: "pubsub-proxy"

---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "pubsub-proxy"
  namespace: "default"
  labels:
    app: "pubsub-proxy"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "pubsub-proxy"
  template:
    metadata:
      labels:
        app: "pubsub-proxy"
        version: v1
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: clientsecret
      containers:
      - name: "pubsub-proxy"
        image: "gcr.io/[PROJECT_ID]/pubsub-proxy:latest"
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pubsub-proxy-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pubsub-proxy
spec:
  hosts:
  - "*"
  gateways:
  - pubsub-proxy-gateway
  http:
  - route:
    - destination:
        port:
         number: 8080
        host: pubsub-proxy
    retries:
      attempts: 3
      perTryTimeout: 2s
