istio/descriptors/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pubsub-proxy-destination-rule
spec:
  host: pubsub-proxy
  subsets:
  - name: v1
    labels:
      version: v1
